--- a/1第一阶段/1-05【异常、单元测试】.md
+++ b/1第一阶段/1-05【异常、单元测试】.md
@@ -20,8 +20,8 @@
 
 **Throwable体系：**
 
-* **Error**：严重错误Error，无法通过处理的错误，只能事先避免，好比绝症。
-* **Exception**：表示异常，异常产生后程序员可以通过代码的方式修正，使程序继续执行，是必须要处理的。好比感冒、阑尾炎。
+* **Error**：严重错误Error，无法通过处理的错误，只能事先避免，好比绝症。Error类代表了编译和系统的错误，不允许捕获；
+* **Exception**：表示异常，异常产生后程序员可以通过代码的方式修正，使程序继续执行，是必须要处理的。好比感冒、阑尾炎。Exception类代表了标准Java库方法所激发的异常。Exception类还包含运行异常类Runtime_Exception和非运行异常类Non_RuntimeException这两个直接的子类。
 
 **Throwable中的常用方法：**
 
@@ -37,14 +37,16 @@
 
 出现异常，不要紧张，把异常的简单类型名，拷贝到API中去查。
 
-## 1.2 异常分类
+## 1.2 异常Exception
 
 我们平常说的异常就是指Exception，因为这类异常一旦出现，我们就要对代码进行更正，修复程序。
 
-**异常(Exception)的分类**：根据在编译时期还是运行时期去检查异常？
+**异常(Exception)的分类**：
 
-* **编译时期异常**：checked异常。在编译时期，就会检查，如果没有处理异常，则编译失败。（如日期格式化异常）
-* **运行时期异常**：runtime异常。在运行时期，检查异常。在编译时期，运行异常不会编译器检测（不报错）。（如科学异常）
+* **运行时期异常**：runtime异常。在运行时期，检查异常。运行异常类对应于编译错误，它是指Java程序在运行时产生的由解释器引发的各种异常。
+  运行异常可能出现在任何地方，且出现频率很高，因此为了避免巨大的系统资源开销，编译器不对异常进行检查。所以Java语言中的运行异常不一定被捕获。出现运行错误往往表示代码有错误，如：算数异常（如被0除）、下标异常（如数组越界）等。
+* **非运行时异常**：非运行异常时Non_RuntimeException类及其子类的实例，又称为可检测异常。
+  Java编译器利用分析方法或构造方法中可能产生的结果来检测Java程序中是否含有检测异常的处理程序，对于每个可能的可检测异常，方法或构造方法的throws子句必须列出该异常对应的类。在Java的标准包java.lang java.util 和Java net中定义的异常都是非运行异常。
 
 **代码如下：**
 
@@ -113,21 +115,87 @@ public class Demo01Exception {
 }
 ```
 
-## 1.4 异常的产生过程解析
+## 1.3 常见的异常
 
-<!--P290-->
+| 异常类型                       | 说明                                           |
+| ------------------------------ | ---------------------------------------------- |
+| RuntimeException               | 运行时异常，多数 java.lang 异常的根类          |
+| IOException                    | I/O 异常，文件未找到、未打开或者IO操作不能进行 |
+| ArithmeticException            | 算数异常，例如零做除数                         |
+| ArrayIndexOutOfBoundsException | 数组越界索引异常                               |
+| NullPointerException           | 空指针异常                                     |
+| ClassNotFoundException         | 无法加载指定的类异常                           |
+| IllegalArgumentException       | 不合法的参数异常                               |
+| FileNotFoundException          | 文件找不到异常                                 |
+| EOFException                   | 文件已结束异常                                 |
+| SQLException                   | 操作数据库异常                                 |
+| InterruptedException           | 线程终端异常                                   |
 
-先运行下面的程序，程序会产生一个数组索引越界异常`ArrayIndexOfBoundsException`。
+## 1.4 异常产生过程
+
+运行下面的程序，程序会产生一个数组索引越界异常`ArrayIndexOfBoundsException`。
 
 ![异常的产生过程解析](..\图片\1-05【异常】\1-1.4 异常的产生过程解析.png)
 
-## 1.5 异常 中断与陷入
+## 1.5 中断、异常与陷入
 
-**中断/异常/陷入机制**是操作系统由用户态转为内核态的唯一途径，是操作系统的驱动力。
+中断/异常/陷入机制是操作系统由用户态转为内核态的唯一途径，是操作系统的驱动力。
+
+### 1.5.1 中断与异常
+
+中断、异常机制有以下特征：随机发生、自动处理（硬件完成）、可恢复。终端和异常是CPU对系统发生的某个事情做出的一种反应。
+
+中断、异常的区别：
+
+- 中断属外部事件，是正在运行的程序所不期望的
+- 异常由正在执行的指令引发
+
+中断/异常的引入目的：
+
+- 中断的引入是为了CPU与设备之间的并行操作
+- 异常的引入是为了表示CPU执行指令时本身出现的问题
 
 一个故事：小明在看书，突然来了个电话，接完电话继续看书，这是中断；小明在看书，感觉口渴了，喝了水接着看书，这是异常。
 
-![](..\图片\1-05【异常】\2-中断与异常.jpg)
+<table>
+<thead>
+  <tr>
+    <th></th>
+    <th>类别</th>
+    <th>原因</th>
+    <th>同步/异步</th>
+    <th>返回行为</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>中断</td>
+    <td>中断（interrupt）</td>
+    <td>来自I/O设备或其他硬件部件</td>
+    <td>异步</td>
+    <td>总是返回到下一条指令</td>
+  </tr>
+  <tr>
+    <td rowspan="3">异常</td>
+    <td>陷入(trap)</td>
+    <td>有意识安排的</td>
+    <td>同步</td>
+    <td>返回到下一条指令</td>
+  </tr>
+  <tr>
+    <td>故障（fault）</td>
+    <td>可恢复的错误</td>
+    <td>同步</td>
+    <td>返回到当前指令</td>
+  </tr>
+  <tr>
+    <td>终止（abort）</td>
+    <td>不可恢复的错误</td>
+    <td>同步</td>
+    <td>不会返回</td>
+  </tr>
+</tbody>
+</table>
 
 * 中断：中断是指 CPU 对系统发生某事件时的这样一种响应:
 
@@ -137,54 +205,18 @@ public class Demo01Exception {
 
   异常包括很多方面，有出错（fault），有陷入（trap），也有可编程异常（programmable exception）。
 
-### 中断
+### 1.5.2 中断与陷入
 
-- 外中断——就是我们指的**中断**——是指由于外部设备事件所引起的中断，如通常的磁盘中断、打印机中断等；
-- 内中断——就是**异常**——是指由于 CPU 内部事件所引起的中断，如程序出错(非法指令、地址越界)。
-  内中断(trap)也被译为“**捕获**”或“**陷入**”。
+- 外中断——就是我们指的中断——是指由于外部设备事件所引起的中断，如通常的磁盘中断、打印机中断等；
+- 内中断——就是异常——是指由于 CPU 内部事件所引起的中断，如程序出错(非法指令、地址越界)溢出、除数为零等。内中断(trap)也被译为“捕获”或“陷入”。
 
 ![](..\图片\1-05【异常】\3-事件.png)
-
-### 中断与异常
-
-* **中断、异常的区别**
-
-  - 中断属外部事件，是正在运行的程序所不期望的
-
-  - 异常由正在执行的指令引发
-  - **相同点：**都是**CPU**对**系统**发生的某**个事情**做出的**一种反应**。
-  - **区别**：中断由外因引起，异常由CPU本身原因引起。
-
-* **中断/异常的引入目的**
-
-  - 中断的引入是为了CPU与设备之间的并行操作
-
-  - 异常的引入是为了表示CPU执行指令时本身出现的问题
-
-* **故障与陷入**
-
-  - 缺页异常（page fault），由于是fault，所以当缺页异常处理完成之后，还会去尝试重新执行那条触发异常的指令（那时多半情况是不再缺页）
-
-  - 断点处理，用于调试中，遇到断点会停下来等待你的处理，等到你让其重新执行了，就直接执行下一条指令
-
-### 中断与陷入
-
-* **中断与陷入的联系**
-  * 外中断时指来自处理机和内存外部的中断,如I/O中断、定时器中断、外部信号中断等。狭义上也叫中断;
-  * 内中断主要指在处理机和内存内部产生的中断，也称陷入，如校验错、页面失效、溢出、除数为零等。
-* **中断与陷入的主要区别**
-  * 陷入通常由处理机正在执行的现行指令引起，而中断则是由与现行指令无关的中断源引起的。
-  * 陷阱处理程序提供的服务为当前进程所用，而中断处理程序提供的服务则不是为了当前进程的。
-  * CPU 在执行完一条指令之后，下一条指令开始之前响应中断，而在一条指令执行中也可以响应陷阱。
-  * 在有的系统中，陷入处理程序被规定在各自的进程上下文中执行，而中断处理程序则在系统上下文中执行。
 
 # 第二章 异常的处理
 
 Java异常处理的五个关键字：try、catch、finally、throw、throws
 
 ## 2.1 抛出异常throw
-
-<!--P291-->
 
 在编写程序的时候，我们必须要考虑程序出现的问题的情况。比如，在定义方法时，方法需要接受参数。那么，当调用方法使用接收到的参数时，首先需要先对参数数据进行合法的判断，数据若不合法，就应该告诉调用者，传递合法的数据进来。这时需要使用抛出异常的方式来告诉调用者。
 
@@ -194,13 +226,11 @@ Java异常处理的五个关键字：try、catch、finally、throw、throws
 
 2. 需要将这个异常对象告知给调用者。怎么告知呢？怎么将这个异常对象传递到调用者处呢？通过关键字throw就可以完成。throw异常对象。
 
-   throw**用在方法内**，用来抛出一个异常对象，将这个异常对象传递到调用者处，并结束当前方法的执行。
+   throw用在方法内，用来抛出一个异常对象，将这个异常对象传递到调用者处，并结束当前方法的执行。
 
 ## 2.2 Objects非空判断
 
-<!--P292-->
-
-还记得我们学习过一个类Objects吗，曾经提到过它由一些静态的实用方法组成，这些方法是null-save（空指针安全的）或者null-tolerant（容忍空指针的），那么在它的源码中，对对象为null的值进行了抛出异常操作。
+学习过一个类Objects，它由一些静态的实用方法组成，这些方法是null-save（空指针安全的）或者null-tolerant（容忍空指针的），那么在它的源码中，对对象为null的值进行了抛出异常操作。
 
 * `public static <T> T requireNonNull(T obj)`:查看指定引用对象不是null。
 
@@ -215,20 +245,12 @@ public static <T> T requireNOnNUll(T Obj) {
 ```
 
 ```java
-import java.util.Objects;
-
 public class Demo04Objects {
     public static void main(String[] args) {
         method(null);
     }
 
     public static void method(Object obj) {
-        // 对传递过来的参数进行合法性判断，判断是否为null
-        /*if (obj == null) {
-            throw new NullPointerException("传递的对象的值是null");
-        }*/
-
-        // Objects.requireNonNull(obj);
         Objects.requireNonNull(obj, "传递的对象的值是null");
     }
 }
@@ -236,19 +258,15 @@ public class Demo04Objects {
 
 ## 2.3 声明异常throws
 
-<!--P293-->
-
 **声明异常**：将问题标识出来，报告给调用者，如果方法内通过throw抛出了编译时异常，而没有捕获处理（稍后讲解该方式），那么必须通过throws进行声明，让调用者去处理。
 
-关键字**throws**运用于方法声明之上，用于表示当前方法不处理异常，而是提醒该方法的调用者来处理异常（抛出异常）。
+关键字throws运用于方法声明之上，用于表示当前方法不处理异常，而是提醒该方法的调用者来处理异常（抛出异常）。
 
-**异常声明格式：**
+异常声明格式：`修饰符 返回值类型 方法名(参数) throws 异常类名1，异常类名2...{    }`
 
-`修饰符 返回值类型 方法名(参数) throws 异常类名1，异常类名2...{    }`
+throws关键字：异常处理的第一种方式，交给别人来处理
 
-**throws关键字**：异常处理的第一种方式，交给别人来处理
-
-**作用**：
+作用：
 
 * 当方法内部抛出异常对象的时候，那么我们就必须处理这个异常对象
 * 可以使用throws关键字处理异常对象，会把异常对象声明抛出给方法的调用者处理（自己不处理，给别人处理），最终转交给JVM处理-->中断处理
@@ -505,9 +523,140 @@ public class Demo02TryCatchFinally {
 }
 ```
 
-## 2.5 异常注意事项
+## 2.5 try with resource
 
-<!--P297-->
+<!--P378-->
+
+之前的异常一直是抛出处理，实际开发中并不能这么处理，建议使用`try...catch...finally`代码块，处理异常部分。
+
+代码部分：
+
+```java
+import java.io.FileWriter;
+import java.io.IOException;
+
+public class Demo01TryCatch {
+    public static void main(String[] args) {
+        // 提高变量fw的作用域，让finally可以使用
+        // 变量在定义的时候可以没有值，但是使用的时候必须有值，如果new对象失败会没有值，所以需要提前赋值
+        FileWriter fw = null;
+
+        try {
+            // 可能会产生异常的代码
+            fw = new FileWriter("09_IOAndProperties\\h.txt");
+
+            for (int i = 0; i < 10; i++) {
+                fw.write("hellow world" + i + "\r\n");
+            }
+
+        } catch(IOException e) {
+            // 异常的处理逻辑
+            System.out.println(e);
+
+        } finally {
+            // 一定会使用的代码
+            // 创建对象失败了，那么fw的默认值就是null，null是不能调用方法的，会抛出异常，所以需要提前判断一下
+            if (fw != null) {
+                try {
+                    // fw.close方法声明抛出了IOException异常对象，所以需要处理
+                    fw.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+<!--P379 1.4-->
+
+JDK7的新特性：
+
+​	在try后边加一个()，在括号中定义流对象。
+
+​	try代码执行完毕后，流对象可以释放掉，不用写finally。
+
+```java
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class Demo02JDK7 {
+    public static void main(String[] args) {
+        try(        // 1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
+                    FileInputStream fis = new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg");
+                    // 2.创建一个字节输出流对象，构造方法中绑定写入的目的地
+                    FileOutputStream fos = new FileOutputStream("D:\\Java\\18.jpg");) {
+            // 3.使用字节输入流对象中的方法read读取文件
+            // 4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
+            int len = 0;
+            while((len = fis.read()) != -1) {
+                fos.write(len);
+            }
+            
+        } catch (IOException e) {
+            System.out.println(e);
+        }
+    }
+}
+```
+
+JDK9的新特性：
+
+* try前面定义流对象。
+
+* try后面的()中可以直接引入遛对象的名称(变量名)。
+
+* try代码执行完毕后，流对象可以释放掉，不用写finally。
+
+* 定义流对象的时候有异常要抛出处理。
+
+  格式：
+
+  ```
+  	A a = new A();
+  	B b = new B();
+  	
+  	try(a；b) {
+  		可能会产生异常的代码
+  	} catch(异常类变量 变量名) {
+  		异常的处理逻辑
+  	}
+  ```
+
+```java
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class Demo03JDK9 {
+    public static void main(String[] args) throws FileNotFoundException {
+        // 1.创建一个字节输入流对象，构造方法中绑定要读取的数据源
+        FileInputStream fis = new FileInputStream("D:\\图片\\动漫\\清纯诱惑\\18.jpg");
+        // 2.创建一个字节输出流对象，构造方法中绑定写入的目的地
+        FileOutputStream fos = new FileOutputStream("D:\\Java\\19.jpg");
+
+        try (fis; fos) {
+            // 3.使用字节输入流对象中的方法read读取文件
+            // 4.使用字节输出流中的方法write，把读取到的字节写入到目的地文件中
+            int len = 0;
+            while((len = fis.read()) != -1) {
+                fos.write(len);
+            }
+        } catch (IOException e) {
+            System.out.println(e);
+        }
+    }
+}
+```
+
+
+
+
+
+## 2.5 异常注意事项
 
 * 多个异常使用捕获又该如何处理呢？
 
@@ -778,3 +927,107 @@ public class Demo01RegisterException {
     }
 }
 ```
+
+# 第一章 Junit单元测试
+
+测试分类：
+
+1. 黑盒测试：不需要写代码，给输入值，看看程序是否能够输出期望的值。
+2. 白盒测试：需要写代码，关注程序具体的执行流程。(Junit单元测试就是白盒测试)。
+
+![](D:\Java\笔记\图片\1-14【Junit单元测试、反射、注解】\1.png)
+
+使用方法如下：
+
+1. 定义一个测试类（测试用例）
+   * 测试类名命名规则：被测试的类名 + Test `CalculatorTest`
+   * 包名命名规则：XXX.XXX.XXX.test  `com.linxuan.test`
+2. 在测试类里面定义测试方法（测试方法可以独立运行，点击旁边的绿色小三角即可）
+   * 方法名命名规则：test + 测试的方法名 `testAdd()`
+   * 返回值：void
+   * 参数列表：空参
+
+   * 测试方法要使用public修饰
+3. 给测试方法加上注解`@Test`
+4. 导入Junit依赖环境
+5. 运行测试方法，检查判定结果（测试方法可以独立运行，点击旁边的绿色小三角即可）
+
+## 1.1 判定结果
+
+* 红色：失败
+
+* 绿色：成功
+
+* 一般我们会使用断言操作来处理结果
+
+  Assert.assertEquals(期望的结果，result);
+
+  如果结果与我们期望的结果不同，会抛出异常，变成红色。
+
+```java
+// 被测试类
+public class Calculator {
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+    public int sub(int a, int b) {
+        return a - b;
+    }
+}
+```
+
+```java
+// 定义测试类
+public class CalculatorTest {
+
+    // 定义测试方法 加上注解@Test
+    @Test
+    public void testAdd() {
+        // 创建对象，使用对象的方法
+        Calculator c = new Calculator();
+        int result = c.add(1, 2);
+
+        // 断言操作
+        Assert.assertEquals(3, result);
+    }
+
+    @Test
+    public void testSub() {
+        // 创建对象，使用对象的方法
+        Calculator c = new Calculator();
+        int result = c.sub(1, 2);
+
+        // 断言操作
+        // 期待的值与结果不一样，会变成红色，报错
+        Assert.assertEquals(3, result);
+    }
+}
+```
+
+## 1.2 补充注解
+
+当我们在测试的时候会有很多重复的操作，例如IO流中的获取资源和释放资源。每当测试一个方法就需要重复操作。有注解可以帮助我们。
+
+* `@Before`：
+  * 修饰的成员方法会在测试之前被自动执行
+  * 初始化方法：用于资源申请，所有测试方法在执行之前都会先执行该方法
+* `@After`：
+  * 修饰的成员方法会在测试方法执行之后自动被执行
+  * 释放资源方法：在所有测试方法执行完成之后，都会自动执行该方法
+
+`@After`注解的方法没有必要放在最后，两者放在前面就可以了，最后会自动执行这个注解的方法的。
+
+```java
+@Before
+public void init() {
+    System.out.println("init...");
+}
+
+@After
+public void close() {
+    System.out.println("close...");
+}
+```
+
+# 
