--- a/1第一阶段/1-14【反射、注解】.md
+++ b/1第一阶段/1-14【反射、注解】.md
@@ -1,108 +1,6 @@
-# 第一章 Junit单元测试
-
-测试分类：
-
-1. 黑盒测试：不需要写代码，给输入值，看看程序是否能够输出期望的值。
-2. 白盒测试：需要写代码，关注程序具体的执行流程。(Junit单元测试就是白盒测试)。
-
-![](..\图片\1-14【Junit单元测试、反射、注解】\1.png)
-
-使用方法如下：
-
-1. 定义一个测试类（测试用例）
-   * 测试类名命名规则：被测试的类名 + Test `CalculatorTest`
-   * 包名命名规则：XXX.XXX.XXX.test  `com.linxuan.test`
-2. 在测试类里面定义测试方法（测试方法可以独立运行，点击旁边的绿色小三角即可）
-   * 方法名命名规则：test + 测试的方法名 `testAdd()`
-   * 返回值：void
-   * 参数列表：空参
-   
-   * 测试方法要使用public修饰
-3. 给测试方法加上注解`@Test`
-4. 导入Junit依赖环境
-5. 运行测试方法，检查判定结果（测试方法可以独立运行，点击旁边的绿色小三角即可）
-
-## 1.1 判定结果
-
-* 红色：失败
-
-* 绿色：成功
-
-* 一般我们会使用断言操作来处理结果
-
-  Assert.assertEquals(期望的结果，result);
-
-  如果结果与我们期望的结果不同，会抛出异常，变成红色。
-
-```java
-// 被测试类
-public class Calculator {
-    public int add(int a, int b) {
-        return a + b;
-    }
-
-    public int sub(int a, int b) {
-        return a - b;
-    }
-}
-```
-
-```java
-// 定义测试类
-public class CalculatorTest {
-
-    // 定义测试方法 加上注解@Test
-    @Test
-    public void testAdd() {
-        // 创建对象，使用对象的方法
-        Calculator c = new Calculator();
-        int result = c.add(1, 2);
-
-        // 断言操作
-        Assert.assertEquals(3, result);
-    }
-
-    @Test
-    public void testSub() {
-        // 创建对象，使用对象的方法
-        Calculator c = new Calculator();
-        int result = c.sub(1, 2);
-
-        // 断言操作
-        // 期待的值与结果不一样，会变成红色，报错
-        Assert.assertEquals(3, result);
-    }
-}
-```
-
-## 1.2 补充注解
-
-当我们在测试的时候会有很多重复的操作，例如IO流中的获取资源和释放资源。每当测试一个方法就需要重复操作。有注解可以帮助我们。
-
-* `@Before`：
-  * 修饰的成员方法会在测试之前被自动执行
-  * 初始化方法：用于资源申请，所有测试方法在执行之前都会先执行该方法
-* `@After`：
-  * 修饰的成员方法会在测试方法执行之后自动被执行
-  * 释放资源方法：在所有测试方法执行完成之后，都会自动执行该方法
-
-`@After`注解的方法没有必要放在最后，两者放在前面就可以了，最后会自动执行这个注解的方法的。
-
-```java
-@Before
-public void init() {
-    System.out.println("init...");
-}
-
-@After
-public void close() {
-    System.out.println("close...");
-}
-```
-
 # 第二章 反射
 
-反射：框架设计的灵魂
+反射：框架设计的灵魂。框架：半成品软件，可以在框架的基础上面进行软件的开发，简化代码
 
 框架我们都了解，需要各种各样的配置，我们在配置文件里面编写各种各样的全类名，配置信息等等。然后框架获取这些配置信息来创建对象来使用。这其中就应用到了反射。
 
@@ -184,24 +82,70 @@ public class Demo01 {
 
 而如果想要创建其他的对象或者使用该对象的其他方法，只需要修改配置文件即可。源代码我们不用进行更改。
 
+## 2.1 反射介绍
 
+反射机制允许程序在执行期间借助于ReflectionAPI取得任何类的内部信息（比如成员变量，构造器，成员方法等等），并且能够操作对象的属性及方法。反射在设计模式和框架底层都会用到。
 
+加载完类之后，在堆中就会产生一个Class类型的对象（一个类中只有一个Class对象），这个对象包含了类的完整结构信息。通过这个对象得到类的结构。这个对象就像一面镜子，透过这个镜子就可以看到这个类的结构。所以形象的称之为反射。
 
+将类的各个组成部分封装为其他对象，这就是反射机制
 
 ![](..\图片\1-14【Junit单元测试、反射、注解】\2.png)
 
-## 2.1 框架
+Java反射机制可以完成：
 
-* 概念：半成品软件。可以再框架的基础上面进行软件的开发，简化代码
+1. 在运行时判断任意一个对象所属的类
+2. 在运行时构造任意一个类的对象
+3. 在运行时得到任意一个类所具有的成员变量和方法
+4. 在运行时调用任意一个对象那个的成员变量和方法
+5. 生成动态代理
 
-## 2.2 反射
+将类的各个组成部分封装为其他对象，这就是反射机制。因此与反射相关的主要类如下：
 
-* 概念：将类的各个组成部分封装为其他对象，这就是反射机制
+* `java.lang.Class`：代表一个类，Class对象标识某个类加载后在堆中的对象。
+* `java.lang.reflect.Method`：代表类的方法，Method对象表示某个类的方法。
+* `java.lang.reflect.Filed`：代表类的成员变量。
+* `java.lang.reflect.Constructor`：代表类的构造方法。
 
-**反射的好处**
+```java
+public class Demo01 {
+    public static void main(String[] args) throws Exception {
+        Properties properties = new Properties();
+        properties.load(new FileInputStream("src\\main\\resources\\linxuan.properties"));
+        String proPackage = properties.getProperty("package");
+        String proMethod = properties.getProperty("method");
+        
+        // 加载类，返回Class类型的对象clazz
+        Class<?> clazz = Class.forName(proPackage);
+        // 通过clazz得到加载的类 com.linxuan.demo01.Student 的对象实例
+        Object instanObject = clazz.newInstance();
 
-1. 可以再程序运行过程中，操作这些对象
-2. 可以解耦，降低耦合性，提高程序的可扩展性能
+        // 通过clazz得到加载的类 com.linxuan.demo01.Student 的 proMethod out方法对象
+        // 在反射中 可以把方法视为对象 万物皆对象
+        Method methodObj = clazz.getMethod(proMethod);
+        // 通过methodObj调用方法 即通过方法对象来调用方法
+        methodObj.invoke(instanObject); // 这是一个学生类的方法out
+
+        // 获取name成员变量对象 getField不能得到私有属性
+        Field nameFiled = clazz.getField("name");
+        // 调用方法打印nameFiled成员变量所代表的值
+        System.out.println(nameFiled.get(instanObject));
+
+        // 获取类的无参构造方法对象
+        Constructor<?> noArgsConstructor = clazz.getConstructor();
+        System.out.println(noArgsConstructor);
+        // 获取类的全残构造方法对象
+        Constructor<?> allArgsConstructor = clazz.getConstructor(String.class, int.class);
+        System.out.println(allArgsConstructor);
+    }
+}
+```
+
+## 2.2 反射调用优化
+
+反射的优点：可以动态的创建和使用对象（也是框架底层的核心），使用灵活。如果么有反射机制，那么框架技术就会失去底层支撑。
+
+反射的缺点：使用反射基本是解释执行，对执行速度有影响。
 
 ## 2.3 获取Class对象的方式
 
