--- a/1第一阶段/1-16【数据结构】.md
+++ b/1第一阶段/1-16【数据结构】.md
@@ -8,9 +8,7 @@
 
 我们java是面向对象的语言，就好似自动档轿车，C语言好似手动档吉普。数据结构呢？是变速箱的工作原理。你完全可以不知道变速箱怎样工作，就把自动档的车子从 A点 开到 B点，而且未必就比懂得的人慢。写程序这件事，和开车一样，经验可以起到很大作用，但如果你不知道底层是怎么工作的，就永远只能开车，既不会修车，也不能造车。当然了，数据结构内容比较多，细细的学起来也是相对费功夫的，不可能达到一蹴而就。我们将常见的数据结构：堆栈、队列、数组、链表和红黑树 这几种给大家介绍一下，作为数据结构的入门，了解一下它们的特点即可。
 
-![](D:\Java\笔记\图片\1-03\数据结构比喻.png)
-
-![](D:\Java\笔记\图片\1-03\数据结构比喻.png)
+![](D:\Java\笔记\图片\1-16【数据结构】\数据结构比喻.png)
 
 ## 2.2 常见的数据结构
 
@@ -26,7 +24,7 @@
 
 * 栈的入口、出口的都是栈的顶端位置。
 
-  ![](D:\Java\笔记\图片\1-03\堆栈.png)
+  ![](D:\Java\笔记\图片\1-16【数据结构】\堆栈.png)
 
 这里两个名词需要注意：
 
@@ -43,7 +41,7 @@
 * 先进先出（即，存进去的元素，要在后它前面的元素依次取出后，才能取出该元素）。例如，小火车过山洞，车头先进去，车尾后进去；车头先出来，车尾后出来。
 * 队列的入口、出口各占一侧。例如，下图中的左侧为入口，右侧为出口。
 
-![](D:\Java\笔记\图片\1-03\队列图.bmp)
+![](D:\Java\笔记\图片\1-16【数据结构】\队列图.bmp)
 
 #### 数组
 
@@ -53,12 +51,12 @@
 
 * 查找元素快：通过索引，可以快速访问指定位置的元素
 
-  ![](D:\Java\笔记\图片\1-03\数组查询快.png)
+  ![](D:\Java\笔记\图片\1-16【数据结构】\数组查询快.png)
 
 * 增删元素慢
 
-  * **指定索引位置增加元素**：需要创建一个新数组，将指定新元素存储在指定索引位置，再把原数组元素根据索引，复制到新数组对应索引的位置。如下图![](D:\Java\笔记\图片\1-03\数组添加.png)
-  * **指定索引位置删除元素：**需要创建一个新数组，把原数组元素根据索引，复制到新数组对应索引的位置，原数组中指定索引位置元素不复制到新数组中。如下图![](D:\Java\笔记\图片\1-03\数组删除.png)
+  * **指定索引位置增加元素**：需要创建一个新数组，将指定新元素存储在指定索引位置，再把原数组元素根据索引，复制到新数组对应索引的位置。如下图![](D:\Java\笔记\图片\1-16【数据结构】\数组添加.png)
+  * **指定索引位置删除元素：**需要创建一个新数组，把原数组元素根据索引，复制到新数组对应索引的位置，原数组中指定索引位置元素不复制到新数组中。如下图![](D:\Java\笔记\图片\1-16【数据结构】\数组删除.png)
 
 
 
@@ -66,13 +64,13 @@
 
 * **链表**:**linked list**,由一系列结点node（链表中每一个元素称为结点）组成，结点可以在运行时i动态生成。每个结点包括两个部分：一个是存储数据元素的数据域，另一个是存储下一个结点地址的指针域。我们常说的链表结构有单向链表与双向链表，那么这里给大家介绍的是**单向链表**。
 
-  ![](D:\Java\笔记\图片\1-03\单链表结构特点.png)
+  ![](D:\Java\笔记\图片\1-16【数据结构】\单链表结构特点.png)
 
 简单的说，采用该结构的集合，对元素的存取有如下的特点：
 
 * 多个结点之间，通过地址进行连接。例如，多个人手拉手，每个人使用自己的右手拉住下个人的左手，依次类推，这样多个人就连在一起了。
 
-  ![](D:\Java\笔记\图片\1-03\单链表结构.png)
+  ![](D:\Java\笔记\图片\1-16【数据结构】\单链表结构.png)
 
 * 查找元素慢：想查找某个元素，需要通过连接的节点，依次向后查找指定元素
 
@@ -80,11 +78,11 @@
 
   * 增加元素：只需要修改连接下个元素的地址即可。
 
-    ![](D:\Java\笔记\图片\1-03\增加结点.png)
+    ![](D:\Java\笔记\图片\1-16【数据结构】\增加结点.png)
 
   * 删除元素：只需要修改连接下个元素的地址即可。
 
-    ![](D:\Java\笔记\图片\1-03\删除结点.bmp)
+    ![](D:\Java\笔记\图片\1-16【数据结构】\删除结点.bmp)
 
 #### 红黑树
 
@@ -96,7 +94,7 @@
 
 如图：
 
-![](D:\Java\笔记\图片\1-03\二叉树.bmp)
+![](D:\Java\笔记\图片\1-16【数据结构】\二叉树.bmp)
 
 我们要说的是二叉树的一种比较有意思的叫做**红黑树**，红黑树本身就是一颗二叉查找树，将节点插入后，该树仍然是一颗二叉查找树。也就意味着，树的键值仍然是有序的。
 
@@ -198,7 +196,7 @@
 
 例如：*key=12360324711202065,*哈希表长度为*1000*，则应把关键字分成*3*位一段，在此舍去最低的两位*65*，分别进行移位叠加和折叠叠加，求得哈希地址为*105*和*907*，如图*8.24*所示。
 
-![](D:\Java\笔记\图片\数据结构\1分段叠加法.png)
+![](D:\Java\笔记\图片\1-16【数据结构】\1分段叠加法.png)
 
 
 
