--- a/1第一阶段/1-18【算法】.md
+++ b/1第一阶段/1-18【算法】.md
@@ -1093,3 +1093,137 @@ Comparator<T>：强行对某个对象 collection 进行整体排序 的比较函
 1，计算整数x的二进制表示有多少个1： `x&=x-1`可以消除x最低位的1，while循环计数，直到x=0即可。
 
 2，只保留整数x最低位的1： `x&-x` ，暨鼎鼎大名的lowbit
+
+
+
+# 第二章 递归
+
+## 2.1 概述
+
+* 递归：指在当前方法内调用自己的这种现象。
+* 递归的分类：
+  * 递归分为两种，直接递归和间接递归。
+  * 直接递归称为方法自身调用自己。
+  * 间接递归可以方法A调用B方法，B方法调用C方法，C方法调用A方法。
+* 注意事项：
+  * 递归要有条件限定，保证递归可以停止，否则会栈内存溢出。
+  * 递归次数不要太多，否则会栈内存溢出。
+  * 构造方法，禁止递归。
+
+```java
+public class Demo01Recursion {
+    public static void main(String[] args) {
+        // a();
+        // b(1);
+    }
+
+    /*
+        构造方法，禁止递归。
+     */
+/*
+    public Demo01Recursion() {
+        Demo01Recursion();
+    }
+*/
+
+
+    /*
+        递归次数不要太多，否则会栈内存溢出。
+        23070 Exception in thread "main" java.lang.StackOverflowError
+     */
+    private static void b(int i) {
+        System.out.println(i);
+        if (i == 30000) {
+            return;
+        }
+        b(++i);
+    }
+
+    /*
+        递归要有条件限定，保证递归可以停止，否则会栈内存溢出。
+        Exception in thread "main" java.lang.StackOverflowError
+     */
+    private static void a() {
+        System.out.println("a方法");
+        a();
+    }
+}
+```
+
+## 2.2 递归累加求和
+
+### 计算1~n的和
+
+<!--P352 12.30-->
+
+```java
+public class Demo02Recursion {
+
+    public static void main(String[] args) {
+        int s = sum(10);
+        System.out.println(s);
+    }
+
+    private static int sum(int n) {
+        if (n == 1) {
+            return 1;
+        }
+        return n + sum(n - 1);
+    }
+}
+```
+
+## 2.3 递归求阶乘
+
+<!--P353-->
+
+```java
+/*
+    递归求阶乘
+ */
+public class Demo03Recursion {
+    public static void main(String[] args) {
+        int sum = multiply(5);
+        System.out.println(sum);
+    }
+
+    public static int multiply(int n) {
+        if (n == 1) {
+            return 1;
+        }
+        return n * multiply(n - 1);
+    }
+}
+```
+
+## 2.4 递归打印多级目录
+
+<!--P354-->
+
+**分析**：多级目录的打印，就是当前目录的嵌套。遍历之前，无从知道有多少级的目录，所以我们还是要使用递归实现。
+
+**代码实现：**
+
+```java
+import java.io.File;
+
+public class Demo04Recursion {
+    public static void main(String[] args) {
+        File file = new File("D:\\Java\\笔记");
+        show(file);
+    }
+
+    public static void show(File dir) {
+        File[] files = dir.listFiles();
+        for (File f : files) {
+            if (f.isDirectory()) {
+                show(f);
+            } else {
+                System.out.println(f);
+            }
+        }
+    }
+}
+```
+
+# 
